# kairos-aster-sdk-V3

./: .env.example  LICENSE  README.md  SECURITY_AUDIT.md  pyproject.toml
examples/: futures_trading.py  generate_wallet.py  spot_trading.py  websocket_streams.py
kairos_aster/: __init__.py  auth.py  client.py  enums.py  errors.py  futures.py  spot.py  ws.py
tests/: test_auth.py
