[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos-aster-sdk"
version = "0.2.0"
description = "Community Python SDK for AsterDEX V3 API — Futures, Spot & WebSocket"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kairos Lab", email = "contact@kairos-lab.org"},
]
keywords = ["aster", "asterdex", "defi", "trading", "eip-712", "web3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "requests>=2.31",
    "eth-account>=0.11",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/Valisthea/kairos-aster-sdk"
Documentation = "https://github.com/Valisthea/kairos-aster-sdk#readme"
Repository = "https://github.com/Valisthea/kairos-aster-sdk"
Issues = "https://github.com/Valisthea/kairos-aster-sdk/issues"

[tool.setuptools.packages.find]
include = ["kairos_aster*"]
